project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-server-svc
spec:
  selector:
    app: project-server
  ports:
  - port: 30081
    protocol: TCP
    targetPort: 3001
